feat(product): implement Product module and related functionalities